calculadora.output
No terminales inútiles en la gramática

   asignacion_sin_ctes


Reglas inútiles en la gramática

   72 asignacion_sin_ctes: VARIABLE '=' expr '\n'
   73                    | VARIABLE '=' CADENA '\n'
   74                    | VARIABLE '=' '<' expr ',' expr '>' '\n'
   75                    | VARIABLE '=' expr_logica '\n'
   76                    | ESCRIBIR CADENA '\n'
   77                    | ESCRIBIR expr '\n'
   78                    | ESCRIBIR expr_logica '\n'
   79                    | error '\n'


Gramática

    0 $accept: lista_instrucciones $end

    1 lista_instrucciones: %empty
    2                    | DEFINICIONES '\n' bloque_definiciones CONFIGURACION '\n' bloque_configuracion OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos
    3                    | CONFIGURACION '\n' bloque_configuracion OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos
    4                    | asignacion lista_instrucciones
    5                    | declaracion '\n' lista_instrucciones

    6 asignacion: VARIABLE '=' expr '\n'
    7           | VARIABLE '=' CADENA '\n'
    8           | VARIABLE '=' '<' expr ',' expr '>' '\n'
    9           | VARIABLE '=' expr_logica '\n'
   10           | ESCRIBIR CADENA '\n'
   11           | ESCRIBIR expr '\n'
   12           | ESCRIBIR expr_logica '\n'
   13           | error '\n'

   14 declaracion: INT VARIABLE
   15            | FLOAT VARIABLE
   16            | STRING VARIABLE
   17            | POS VARIABLE
   18            | declaracion ',' VARIABLE
   19            | error '\n'

   20 expr: REAL
   21     | ENTERO
   22     | VARIABLE
   23     | '(' expr ')'
   24     | expr '+' expr
   25     | expr '-' expr
   26     | expr '*' expr
   27     | expr '/' expr
   28     | expr '^' expr
   29     | expr '%' expr
   30     | '-' expr

   31 expr_logica: BOOL
   32            | '(' expr_logica ')'
   33            | expr '<' expr
   34            | expr '>' expr
   35            | expr LE expr
   36            | expr GE expr
   37            | expr EQ expr
   38            | expr NE expr
   39            | expr_logica AND expr_logica
   40            | expr_logica OR expr_logica
   41            | NOT expr_logica

   42 bloque_definiciones: %empty
   43                    | declaracion '\n' bloque_definiciones
   44                    | asignacion bloque_definiciones

   45 bloque_configuracion: %empty
   46                     | DIMENSION expr bloque_configuracion '\n'
   47                     | bloque_configuracion ENTRADA expr '\n'
   48                     | bloque_configuracion ENTRADA '<' expr ',' expr '>' '\n'
   49                     | bloque_configuracion SALIDA expr '\n'
   50                     | bloque_configuracion SALIDA '<' expr ',' expr '>' '\n'
   51                     | bloque_configuracion PAUSA expr '\n'

   52 bloque_obstaculos: %empty
   53                  | bloque_obstaculos OBSTACULO '<' expr ',' expr '>' '\n'
   54                  | bloque_obstaculos OBSTACULO VARIABLE '\n'
   55                  | bloque_obstaculos SUR expr '\n'
   56                  | bloque_obstaculos ESTE expr '\n'
   57                  | bloque_obstaculos OESTE expr '\n'
   58                  | bloque_obstaculos NORTE expr '\n'
   59                  | bloque_obstaculos OBSTACULO '\n'
   60                  | bloque_obstaculos REPITE expr '\n' bloque_obstaculos FINREPITE '\n'
   61                  | bloque_obstaculos condicional
   62                  | bloque_obstaculos asignacion

   63 bloque_ejemplos: %empty
   64                | bloque_ejemplos EJEMPLO VARIABLE '\n' bloque_ejemplos_anidado FINEJEMPLO '\n'

   65 bloque_ejemplos_anidado: %empty
   66                        | bloque_ejemplos_anidado SUR expr '\n'
   67                        | bloque_ejemplos_anidado ESTE expr '\n'
   68                        | bloque_ejemplos_anidado OESTE expr '\n'
   69                        | bloque_ejemplos_anidado NORTE expr '\n'
   70                        | bloque_ejemplos_anidado asignacion

   71 condicional: IF expr_logica '\n' THEN '\n' bloque_obstaculos ELSE '\n' bloque_obstaculos ENDIF '\n'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 2 3 5 6 7 8 9 10 11 12 13 19 43 46 47 48 49 50 51 53 54 55
    56 57 58 59 60 64 66 67 68 69 71
'%' (37) 29
'(' (40) 23 32
')' (41) 23 32
'*' (42) 26
'+' (43) 24
',' (44) 8 18 48 50 53
'-' (45) 25 30
'/' (47) 27
'<' (60) 8 33 48 50 53
'=' (61) 6 7 8 9
'>' (62) 8 34 48 50 53
'^' (94) 28
error (256) 13 19
BOOL (258) 31
ENTERO (259) 21
OBSTACULO (260) 53 54 59
VARIABLE (261) 6 7 8 9 14 15 16 17 18 22 54 64
ESCRIBIR (262) 10 11 12
CADENA (263) 7 10
DEFINICIONES (264) 2
CONFIGURACION (265) 2 3
OBSTACULOS (266) 2 3
EJEMPLOS (267) 2 3
DIMENSION (268) 46
ENTRADA (269) 47 48
SALIDA (270) 49 50
PAUSA (271) 51
NORTE (272) 58 69
SUR (273) 55 66
ESTE (274) 56 67
OESTE (275) 57 68
EJEMPLO (276) 64
FINEJEMPLO (277) 64
REPITE (278) 60
FINREPITE (279) 60
IF (280) 71
THEN (281) 71
ELSE (282) 71
ENDIF (283) 71
REAL (284) 20
INT (285) 14
FLOAT (286) 15
STRING (287) 16
POS (288) 17
OR (289) 40
AND (290) 39
NOT (291) 41
LE (292) 35
GE (293) 36
EQ (294) 37
NE (295) 38
menos (296)


No terminales con las reglas donde aparecen

$accept (55)
    en la izquierda: 0
lista_instrucciones (56)
    en la izquierda: 1 2 3 4 5, en la derecha: 0 4 5
asignacion (57)
    en la izquierda: 6 7 8 9 10 11 12 13, en la derecha: 4 44 62 70
declaracion (58)
    en la izquierda: 14 15 16 17 18 19, en la derecha: 5 18 43
expr (59)
    en la izquierda: 20 21 22 23 24 25 26 27 28 29 30, en la derecha:
    6 8 11 23 24 25 26 27 28 29 30 33 34 35 36 37 38 46 47 48 49 50
    51 53 55 56 57 58 60 66 67 68 69
expr_logica (60)
    en la izquierda: 31 32 33 34 35 36 37 38 39 40 41, en la derecha:
    9 12 32 39 40 41 71
bloque_definiciones (61)
    en la izquierda: 42 43 44, en la derecha: 2 43 44
bloque_configuracion (62)
    en la izquierda: 45 46 47 48 49 50 51, en la derecha: 2 3 46 47
    48 49 50 51
bloque_obstaculos (63)
    en la izquierda: 52 53 54 55 56 57 58 59 60 61 62, en la derecha:
    2 3 53 54 55 56 57 58 59 60 61 62 71
bloque_ejemplos (64)
    en la izquierda: 63 64, en la derecha: 2 3 64
bloque_ejemplos_anidado (65)
    en la izquierda: 65 66 67 68 69 70, en la derecha: 64 66 67 68
    69 70
condicional (66)
    en la izquierda: 71, en la derecha: 61


Estado 0

    0 $accept: . lista_instrucciones $end

    error          desplazar e ir al estado 1
    VARIABLE       desplazar e ir al estado 2
    ESCRIBIR       desplazar e ir al estado 3
    DEFINICIONES   desplazar e ir al estado 4
    CONFIGURACION  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    STRING         desplazar e ir al estado 8
    POS            desplazar e ir al estado 9

    $end  reduce usando la regla 1 (lista_instrucciones)

    lista_instrucciones  ir al estado 10
    asignacion           ir al estado 11
    declaracion          ir al estado 12


Estado 1

   13 asignacion: error . '\n'
   19 declaracion: error . '\n'

    '\n'  desplazar e ir al estado 13


Estado 2

    6 asignacion: VARIABLE . '=' expr '\n'
    7           | VARIABLE . '=' CADENA '\n'
    8           | VARIABLE . '=' '<' expr ',' expr '>' '\n'
    9           | VARIABLE . '=' expr_logica '\n'

    '='  desplazar e ir al estado 14


Estado 3

   10 asignacion: ESCRIBIR . CADENA '\n'
   11           | ESCRIBIR . expr '\n'
   12           | ESCRIBIR . expr_logica '\n'

    BOOL      desplazar e ir al estado 15
    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    CADENA    desplazar e ir al estado 18
    REAL      desplazar e ir al estado 19
    NOT       desplazar e ir al estado 20
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 22

    expr         ir al estado 23
    expr_logica  ir al estado 24


Estado 4

    2 lista_instrucciones: DEFINICIONES . '\n' bloque_definiciones CONFIGURACION '\n' bloque_configuracion OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos

    '\n'  desplazar e ir al estado 25


Estado 5

    3 lista_instrucciones: CONFIGURACION . '\n' bloque_configuracion OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos

    '\n'  desplazar e ir al estado 26


Estado 6

   14 declaracion: INT . VARIABLE

    VARIABLE  desplazar e ir al estado 27


Estado 7

   15 declaracion: FLOAT . VARIABLE

    VARIABLE  desplazar e ir al estado 28


Estado 8

   16 declaracion: STRING . VARIABLE

    VARIABLE  desplazar e ir al estado 29


Estado 9

   17 declaracion: POS . VARIABLE

    VARIABLE  desplazar e ir al estado 30


Estado 10

    0 $accept: lista_instrucciones . $end

    $end  desplazar e ir al estado 31


Estado 11

    4 lista_instrucciones: asignacion . lista_instrucciones

    error          desplazar e ir al estado 1
    VARIABLE       desplazar e ir al estado 2
    ESCRIBIR       desplazar e ir al estado 3
    DEFINICIONES   desplazar e ir al estado 4
    CONFIGURACION  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    STRING         desplazar e ir al estado 8
    POS            desplazar e ir al estado 9

    $end  reduce usando la regla 1 (lista_instrucciones)

    lista_instrucciones  ir al estado 32
    asignacion           ir al estado 11
    declaracion          ir al estado 12


Estado 12

    5 lista_instrucciones: declaracion . '\n' lista_instrucciones
   18 declaracion: declaracion . ',' VARIABLE

    '\n'  desplazar e ir al estado 33
    ','   desplazar e ir al estado 34


Estado 13

   13 asignacion: error '\n' .
   19 declaracion: error '\n' .

    '\n'      reduce usando la regla 19 (declaracion)
    ','       reduce usando la regla 19 (declaracion)
    $default  reduce usando la regla 13 (asignacion)


Estado 14

    6 asignacion: VARIABLE '=' . expr '\n'
    7           | VARIABLE '=' . CADENA '\n'
    8           | VARIABLE '=' . '<' expr ',' expr '>' '\n'
    9           | VARIABLE '=' . expr_logica '\n'

    BOOL      desplazar e ir al estado 15
    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    CADENA    desplazar e ir al estado 35
    REAL      desplazar e ir al estado 19
    NOT       desplazar e ir al estado 20
    '<'       desplazar e ir al estado 36
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 22

    expr         ir al estado 37
    expr_logica  ir al estado 38


Estado 15

   31 expr_logica: BOOL .

    $default  reduce usando la regla 31 (expr_logica)


Estado 16

   21 expr: ENTERO .

    $default  reduce usando la regla 21 (expr)


Estado 17

   22 expr: VARIABLE .

    $default  reduce usando la regla 22 (expr)


Estado 18

   10 asignacion: ESCRIBIR CADENA . '\n'

    '\n'  desplazar e ir al estado 39


Estado 19

   20 expr: REAL .

    $default  reduce usando la regla 20 (expr)


Estado 20

   41 expr_logica: NOT . expr_logica

    BOOL      desplazar e ir al estado 15
    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    NOT       desplazar e ir al estado 20
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 22

    expr         ir al estado 40
    expr_logica  ir al estado 41


Estado 21

   30 expr: '-' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 43


Estado 22

   23 expr: '(' . expr ')'
   32 expr_logica: '(' . expr_logica ')'

    BOOL      desplazar e ir al estado 15
    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    NOT       desplazar e ir al estado 20
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 22

    expr         ir al estado 44
    expr_logica  ir al estado 45


Estado 23

   11 asignacion: ESCRIBIR expr . '\n'
   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   33 expr_logica: expr . '<' expr
   34            | expr . '>' expr
   35            | expr . LE expr
   36            | expr . GE expr
   37            | expr . EQ expr
   38            | expr . NE expr

    LE    desplazar e ir al estado 46
    GE    desplazar e ir al estado 47
    EQ    desplazar e ir al estado 48
    NE    desplazar e ir al estado 49
    '<'   desplazar e ir al estado 50
    '>'   desplazar e ir al estado 51
    '+'   desplazar e ir al estado 52
    '-'   desplazar e ir al estado 53
    '*'   desplazar e ir al estado 54
    '/'   desplazar e ir al estado 55
    '%'   desplazar e ir al estado 56
    '^'   desplazar e ir al estado 57
    '\n'  desplazar e ir al estado 58


Estado 24

   12 asignacion: ESCRIBIR expr_logica . '\n'
   39 expr_logica: expr_logica . AND expr_logica
   40            | expr_logica . OR expr_logica

    OR    desplazar e ir al estado 59
    AND   desplazar e ir al estado 60
    '\n'  desplazar e ir al estado 61


Estado 25

    2 lista_instrucciones: DEFINICIONES '\n' . bloque_definiciones CONFIGURACION '\n' bloque_configuracion OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos

    error     desplazar e ir al estado 1
    VARIABLE  desplazar e ir al estado 2
    ESCRIBIR  desplazar e ir al estado 3
    INT       desplazar e ir al estado 6
    FLOAT     desplazar e ir al estado 7
    STRING    desplazar e ir al estado 8
    POS       desplazar e ir al estado 9

    CONFIGURACION  reduce usando la regla 42 (bloque_definiciones)

    asignacion           ir al estado 62
    declaracion          ir al estado 63
    bloque_definiciones  ir al estado 64


Estado 26

    3 lista_instrucciones: CONFIGURACION '\n' . bloque_configuracion OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos

    DIMENSION  desplazar e ir al estado 65

    $default  reduce usando la regla 45 (bloque_configuracion)

    bloque_configuracion  ir al estado 66


Estado 27

   14 declaracion: INT VARIABLE .

    $default  reduce usando la regla 14 (declaracion)


Estado 28

   15 declaracion: FLOAT VARIABLE .

    $default  reduce usando la regla 15 (declaracion)


Estado 29

   16 declaracion: STRING VARIABLE .

    $default  reduce usando la regla 16 (declaracion)


Estado 30

   17 declaracion: POS VARIABLE .

    $default  reduce usando la regla 17 (declaracion)


Estado 31

    0 $accept: lista_instrucciones $end .

    $default  aceptar


Estado 32

    4 lista_instrucciones: asignacion lista_instrucciones .

    $default  reduce usando la regla 4 (lista_instrucciones)


Estado 33

    5 lista_instrucciones: declaracion '\n' . lista_instrucciones

    error          desplazar e ir al estado 1
    VARIABLE       desplazar e ir al estado 2
    ESCRIBIR       desplazar e ir al estado 3
    DEFINICIONES   desplazar e ir al estado 4
    CONFIGURACION  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    STRING         desplazar e ir al estado 8
    POS            desplazar e ir al estado 9

    $end  reduce usando la regla 1 (lista_instrucciones)

    lista_instrucciones  ir al estado 67
    asignacion           ir al estado 11
    declaracion          ir al estado 12


Estado 34

   18 declaracion: declaracion ',' . VARIABLE

    VARIABLE  desplazar e ir al estado 68


Estado 35

    7 asignacion: VARIABLE '=' CADENA . '\n'

    '\n'  desplazar e ir al estado 69


Estado 36

    8 asignacion: VARIABLE '=' '<' . expr ',' expr '>' '\n'

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 70


Estado 37

    6 asignacion: VARIABLE '=' expr . '\n'
   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   33 expr_logica: expr . '<' expr
   34            | expr . '>' expr
   35            | expr . LE expr
   36            | expr . GE expr
   37            | expr . EQ expr
   38            | expr . NE expr

    LE    desplazar e ir al estado 46
    GE    desplazar e ir al estado 47
    EQ    desplazar e ir al estado 48
    NE    desplazar e ir al estado 49
    '<'   desplazar e ir al estado 50
    '>'   desplazar e ir al estado 51
    '+'   desplazar e ir al estado 52
    '-'   desplazar e ir al estado 53
    '*'   desplazar e ir al estado 54
    '/'   desplazar e ir al estado 55
    '%'   desplazar e ir al estado 56
    '^'   desplazar e ir al estado 57
    '\n'  desplazar e ir al estado 71


Estado 38

    9 asignacion: VARIABLE '=' expr_logica . '\n'
   39 expr_logica: expr_logica . AND expr_logica
   40            | expr_logica . OR expr_logica

    OR    desplazar e ir al estado 59
    AND   desplazar e ir al estado 60
    '\n'  desplazar e ir al estado 72


Estado 39

   10 asignacion: ESCRIBIR CADENA '\n' .

    $default  reduce usando la regla 10 (asignacion)


Estado 40

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   33 expr_logica: expr . '<' expr
   34            | expr . '>' expr
   35            | expr . LE expr
   36            | expr . GE expr
   37            | expr . EQ expr
   38            | expr . NE expr

    LE   desplazar e ir al estado 46
    GE   desplazar e ir al estado 47
    EQ   desplazar e ir al estado 48
    NE   desplazar e ir al estado 49
    '<'  desplazar e ir al estado 50
    '>'  desplazar e ir al estado 51
    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57


Estado 41

   39 expr_logica: expr_logica . AND expr_logica
   40            | expr_logica . OR expr_logica
   41            | NOT expr_logica .

    $default  reduce usando la regla 41 (expr_logica)


Estado 42

   23 expr: '(' . expr ')'

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 73


Estado 43

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   30     | '-' expr .

    $default  reduce usando la regla 30 (expr)


Estado 44

   23 expr: '(' expr . ')'
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   33 expr_logica: expr . '<' expr
   34            | expr . '>' expr
   35            | expr . LE expr
   36            | expr . GE expr
   37            | expr . EQ expr
   38            | expr . NE expr

    LE   desplazar e ir al estado 46
    GE   desplazar e ir al estado 47
    EQ   desplazar e ir al estado 48
    NE   desplazar e ir al estado 49
    '<'  desplazar e ir al estado 50
    '>'  desplazar e ir al estado 51
    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57
    ')'  desplazar e ir al estado 74


Estado 45

   32 expr_logica: '(' expr_logica . ')'
   39            | expr_logica . AND expr_logica
   40            | expr_logica . OR expr_logica

    OR   desplazar e ir al estado 59
    AND  desplazar e ir al estado 60
    ')'  desplazar e ir al estado 75


Estado 46

   35 expr_logica: expr LE . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 76


Estado 47

   36 expr_logica: expr GE . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 77


Estado 48

   37 expr_logica: expr EQ . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 78


Estado 49

   38 expr_logica: expr NE . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 79


Estado 50

   33 expr_logica: expr '<' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 80


Estado 51

   34 expr_logica: expr '>' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 81


Estado 52

   24 expr: expr '+' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 82


Estado 53

   25 expr: expr '-' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 83


Estado 54

   26 expr: expr '*' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 84


Estado 55

   27 expr: expr '/' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 85


Estado 56

   29 expr: expr '%' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 86


Estado 57

   28 expr: expr '^' . expr

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 87


Estado 58

   11 asignacion: ESCRIBIR expr '\n' .

    $default  reduce usando la regla 11 (asignacion)


Estado 59

   40 expr_logica: expr_logica OR . expr_logica

    BOOL      desplazar e ir al estado 15
    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    NOT       desplazar e ir al estado 20
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 22

    expr         ir al estado 40
    expr_logica  ir al estado 88


Estado 60

   39 expr_logica: expr_logica AND . expr_logica

    BOOL      desplazar e ir al estado 15
    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    NOT       desplazar e ir al estado 20
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 22

    expr         ir al estado 40
    expr_logica  ir al estado 89


Estado 61

   12 asignacion: ESCRIBIR expr_logica '\n' .

    $default  reduce usando la regla 12 (asignacion)


Estado 62

   44 bloque_definiciones: asignacion . bloque_definiciones

    error     desplazar e ir al estado 1
    VARIABLE  desplazar e ir al estado 2
    ESCRIBIR  desplazar e ir al estado 3
    INT       desplazar e ir al estado 6
    FLOAT     desplazar e ir al estado 7
    STRING    desplazar e ir al estado 8
    POS       desplazar e ir al estado 9

    CONFIGURACION  reduce usando la regla 42 (bloque_definiciones)

    asignacion           ir al estado 62
    declaracion          ir al estado 63
    bloque_definiciones  ir al estado 90


Estado 63

   18 declaracion: declaracion . ',' VARIABLE
   43 bloque_definiciones: declaracion . '\n' bloque_definiciones

    '\n'  desplazar e ir al estado 91
    ','   desplazar e ir al estado 34


Estado 64

    2 lista_instrucciones: DEFINICIONES '\n' bloque_definiciones . CONFIGURACION '\n' bloque_configuracion OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos

    CONFIGURACION  desplazar e ir al estado 92


Estado 65

   46 bloque_configuracion: DIMENSION . expr bloque_configuracion '\n'

    ENTERO    desplazar e ir al estado 16
    VARIABLE  desplazar e ir al estado 17
    REAL      desplazar e ir al estado 19
    '-'       desplazar e ir al estado 21
    '('       desplazar e ir al estado 42

    expr  ir al estado 93


Estado 66

    3 lista_instrucciones: CONFIGURACION '\n' bloque_configuracion . OBSTACULOS '\n' bloque_obstaculos EJEMPLOS '\n' bloque_ejemplos
   47 bloque_configuracion: bloque_configuracion . ENTRADA expr '\n'
   48                     | bloque_configuracion . ENTRADA '<' expr ',' expr '>' '\n'
   49                     | bloque_configuracion . SALIDA expr '\n'
   50                     | bloque_configuracion . SALIDA '<' expr ',' expr '>' '\n'
   51                     | bloque_configuracion . PAUSA expr '\n'

    OBSTACULOS  desplazar e ir al estado 94
    ENTRADA     desplazar e ir al estado 95
    SALIDA      desplazar e ir al estado 96
    PAUSA       desplazar e ir al estado 97


Estado 67

    5 lista_instrucciones: declaracion '\n' lista_instrucciones .

    $default  reduce usando la regla 5 (lista_instrucciones)


Estado 68

   18 declaracion: declaracion ',' VARIABLE .

    $default  reduce usando la regla 18 (declaracion)


Estado 69

    7 asignacion: VARIABLE '=' CADENA '\n' .

    $default  reduce usando la regla 7 (asignacion)


Estado 70

    8 asignacion: VARIABLE '=' '<' expr . ',' expr '>' '\n'
   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57
    ','  desplazar e ir al estado 98


Estado 71

    6 asignacion: VARIABLE '=' expr '\n' .

    $default  reduce usando la regla 6 (asignacion)


Estado 72

    9 asignacion: VARIABLE '=' expr_logica '\n' .

    $default  reduce usando la regla 9 (asignacion)


Estado 73

   23 expr: '(' expr . ')'
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57
    ')'  desplazar e ir al estado 74


Estado 74

   23 expr: '(' expr ')' .

    $default  reduce usando la regla 23 (expr)


Estado 75

   32 expr_logica: '(' expr_logica ')' .

    $default  reduce usando la regla 32 (expr_logica)


Estado 76

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   35 expr_logica: expr LE expr .

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57

    $default  reduce usando la regla 35 (expr_logica)


Estado 77

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   36 expr_logica: expr GE expr .

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57

    $default  reduce usando la regla 36 (expr_logica)


Estado 78

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   37 expr_logica: expr EQ expr .

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57

    $default  reduce usando la regla 37 (expr_logica)


Estado 79

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   38 expr_logica: expr NE expr .

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57

    $default  reduce usando la regla 38 (expr_logica)


Estado 80

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   33 expr_logica: expr '<' expr .

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57

    $default  reduce usando la regla 33 (expr_logica)


Estado 81

   24 expr: expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '^' expr
   29     | expr . '%' expr
   34 expr_logica: expr '>' expr .

    '+'  desplazar e ir al estado 52
    '-'  desplazar e ir al estado 53
    '*'  desplazar e ir al estado 54
    '/'  desplazar e ir al estado 55
    '%'  desplazar e ir al estado 56
    '^'  desplazar e ir al estado 57

    $default  reduce usando la regla 34 (expr_logica)


Estado 82
